--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/avatar": "^2.0.27",
     "@nextui-org/badge": "^2.0.27",
     "@nextui-org/button": "^2.0.31",
+    "@nextui-org/card": "^2.0.28",
+    "@nextui-org/chip": "^2.0.28",
+    "@nextui-org/image": "^2.0.27",
     "@nextui-org/link": "^2.0.29",
     "@nextui-org/navbar": "^2.0.30",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
