--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@nextui-org/card": "^2.0.28",
     "@nextui-org/chip": "^2.0.28",
     "@nextui-org/image": "^2.0.27",
+    "@nextui-org/input": "^2.1.21",
     "@nextui-org/link": "^2.0.29",
     "@nextui-org/navbar": "^2.0.30",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
+    "@nextui-org/tooltip": "^2.0.33",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
+    "nextui-cli": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.0"
